Fix app overflow for smaller displays

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: scroll;
 }
 
 .App-title {
